--- a/static/assets/css/can-i-use-bot.css
+++ b/static/assets/css/can-i-use-bot.css
@@ -70,13 +70,41 @@
     margin-bottom: 49px;
 }
 
+.DiscussSection-gitterPreview {
+    margin: 0 auto;
+    width: 870px;
+    height: 536px;
+    background: url(../images/GitterPreview.jpg) no-repeat;
+    text-align: center;
+}
+
+.DiscussSection-gitterPreview-button,
+.DiscussSection-gitterPreview-button:visited{
+    text-decoration: none;
+    margin-top: 210px;
+    display: inline-block;
+    background-color: #46BC99;
+    box-shadow: 4px 4px 4px 1px rgba(0, 0, 0, 0.3);
+    border-radius: 16px;
+    font-size: 4rem;
+    padding: 15px 40px;
+    color: #FFF;
+    transition: 0.2s;
+}
+.DiscussSection-gitterPreview-button:hover{
+    text-decoration: none;
+    color: #FFF;
+    box-shadow: 7px 10px 10px 1px rgba(0, 0, 0, 0.5);
+    transition: 0.2s;
+}
+
+/*
 .DiscussSection-iframeWrap {
     position: relative;
     max-width: 800px;
-    padding-bottom: 40%;
+    height: 600px;
     margin: 0 auto;
 }
-
 .DiscussSection iframe {
     position: absolute;
     top: 0;
@@ -84,6 +112,7 @@
     width: 100%;
     height: 100%;
 }
+*/
 
 .Footer {
     background-color: #3e92d2;
@@ -100,18 +129,17 @@
 .Footer-profile {
     margin-bottom: 40px;
 }
-
-
 /* Privacy Policy page */
-.page-pricacyPolicy{
+
+.page-pricacyPolicy {
     background-color: #3e92d2;
     color: #fff;
 }
-.page-pricacyPolicy a{
+
+.page-pricacyPolicy a {
     color: #fff;
     text-decoration: underline;
 }
-
 /* Bitcoin donate button */
 
 .COINWIDGETCOM_CONTAINER.COINWIDGETCOM_LIGHT > a {
