--- a/static/assets/css/can-i-use-bot.css
+++ b/static/assets/css/can-i-use-bot.css
@@ -129,6 +129,7 @@
 .Footer-profile {
     margin-bottom: 40px;
 }
+
 /* Privacy Policy page */
 
 .page-pricacyPolicy {
@@ -154,4 +155,16 @@
 
 .COINWIDGETCOM_CONTAINER.COINWIDGETCOM_LIGHT > a:hover {
     background: #ebebeb !important;
+}
+
+/* Support */
+.supportSection{
+    max-width: 980px;
+    margin: 40px auto;
+    background: #FFF;
+}
+
+.supportSection__item{
+    padding: 20px;
+    border-bottom: 1px solid #CCCCCC;
 }
